@@ -116,6 +116,10 @@ Build
 Tests
 -----
 
+- Issue #6293: Have regrtest.py echo back sys.flags.  This is done by default
+  in whole runs and enabled selectively using ``--header`` when running an
+  explicit list of tests.  Original patch by Collin Winter.
+
 - Issue #775964: test_grp now skips YP/NIS entries instead of failing when
   encountering them.
 
